--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -14,10 +14,16 @@ body {
 .jumbotron {
   background-color: #114B5F;
   color: white;
+    h1 {
+      padding: 120px ;
+    }
+
+    p {
+      padding: 0px 60px;
+      font-size: 1.6em;
+    }
 }
-.jumbotron h1 {
-  padding: 120px;
-}
+
 #git h1{
   font-weight: 700;
 
@@ -33,3 +39,15 @@ pre {
     overflow: scroll;
     white-space: pre;
 }
+
+    // .container-fluid {
+    //   padding-top: 70px;
+    // //  padding-bottom: 70px;
+    // }
+  .footer {
+      padding-top: 70px;
+      padding-bottom: 70px;
+      background-color: #2f2f2f; /* Black Gray */
+      color: #fff;
+      font-size: 1.2em;
+  }
